# Philosophers

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
philo_one/: CMakeLists.txt  Makefile  generate_makefile
philo_one/includes/: philosophers.h
philo_one/srcs/: clean_all.c  fill_configuration_from_args.c  logging.c  main.c  philosopher_die.c  philosopher_live.c  philosopher_utilities.c  setup_philosophers.c
philo_one/srcs/utilities/: ft_strcpy.c  get_current_time.c  is_number.c  mem_help.c  ms_usleep.c  numlen.c  size_t_to_string.c  string_len.c  string_to_int.c  timeval_into_size_t.c  upgraded_usleep.c
philo_three/: CMakeLists.txt  Makefile  generate_makefile  philo_three
philo_three/includes/: philosophers.h
philo_three/srcs/: clean_all.c  logging.c  main.c  philosopher_die.c  philosopher_live.c  philosopher_utilities.c  setup_philosophers.c
philo_three/srcs/utilities/: ms_usleep.c  numlen.c  size_t_to_string.c  string_len.c  upgraded_usleep.c
philo_two/: CMakeLists.txt  Makefile  generate_makefile  philo_one  philo_two
philo_two/includes/: philosophers.h
philo_two/srcs/: clean_all.c  fill_configuration_from_args.c  logging.c  main.c  philosopher_die.c  philosopher_live.c  philosopher_utilities.c  setup_philosophers.c
philo_two/srcs/utilities/: is_number.c  mem_help.c
